--- a/src/components/sections/landing/HeroSection.astro
+++ b/src/components/sections/landing/HeroSection.astro
@@ -87,6 +87,8 @@ interface Props {
         draggable={"false"}
         loading={"eager"}
         format={"avif"}
+        height={50}
+        width={50}
 	 />
 	}
     </div>
